tests/fixtures/guardrails/invalid/scripts-direct-admin-access/scripts/backfill.mjs
import { createAdminApiClient } from "@shopify/admin-api-client";

export function runBackfill() {
  return createAdminApiClient;
}
